--- a/pages/tools.html
+++ b/pages/tools.html
@@ -13,149 +13,147 @@
     
 </head>
 <body>
-    <div class="grid-container-home">
-        <header class="header-home">
-            <div class="header-home__start">
-                <div class="header-home__start--menu">
-                    <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
-                </div>
-                <div class="header-home__start--brand">
-                    <a href="../index.html">DEVELOPING OUR SELF</a>
-                </div>
+    <header class="header">
+        <div class="header__start">
+            <div class="header__start--menu">
+                <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
             </div>
-            <div class="header-home__center">
-                <div class="header-home__search">
-                    <div class="header-home__search--input search-div">
-                        <input class="search__input" type="text" placeholder="Search a book" name="" id="">
-                    </div>
-                    <div class="header-home__search--btn search-div">
-                        <a href=""><lord-icon src="https://cdn.lordicon.com/xfftupfv.json" trigger="hover" colors="primary:#00008b">
-                        </lord-icon></a>
-                    </div>
-                </div>
+            <div class="header__start--brand">
+                <a href="../index.html">DEVELOPING OUR SELF</a>
             </div>
-            <div class="header-home__end">
-                <div class="header-home__end--notification end__btn">
-                    <a href=""><lord-icon
-                        src="https://cdn.lordicon.com/psnhyobz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
-                    </lord-icon></a>
-                </div>
-                <div class="header-home__end--tool end__btn">
-                    <a href=""><lord-icon
-                        src="https://cdn.lordicon.com/svbmmyue.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px;">
-                    </lord-icon></a>
-                </div>
-                <div class="header-home__end--user end__btn">
-                    <!-- <a href=""><i class="fa-regular fa-user fa-lg"></i></a> -->
-                    <a href="">
-                        <lord-icon
-                        src="https://cdn.lordicon.com/bhfjfgqz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
-                        </lord-icon>
-                    </a>
-                </div>
-            </div>
-        </header>
-        <div class="container-home">
-            <aside class="aside-home">
-                <ul class="aside-home__ul">
-                    <li class="aside-home__li aside-home__li--fitness">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/hovbgwmd.json" trigger="hover" colors="primary:#00008b,secondary:#000008b" style="width:30px;height:30px"  stroke="70">
-                        </lord-icon>                          
-                        </a>
-                        <p>Fitness & Health</p>
-                    </li>
-                    <li class="aside-home__li aside-home__li--emotional-intelligence">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/pnhskdva.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></a>
-                        <p>Emotional Intelligence</p>
-                    </li>
-                    <li class="aside-home__li aside-home__li--productivity">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/hwuyodym.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></i></a>
-                        <p>Habits & Productivity</p>
-                    </li>
-                    <li class="aside-home__li aside-home__li--productivity">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/rzsdhkun.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></i></a>
-                        <p>Money & Finance</p>
-                    </li>
-                    <li class="aside-home__li aside-home__li--productivity">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/hbigeisx.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></i></a>
-                        <p>Skillset Enhancement</p>
-                    </li>
-                    <li class="aside-home__li aside-home__li--productivity">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/fbdgkenc.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></i></a>
-                        <p>Happiness & Success</p>
-                        <!-- Mindset will be here too -->
-                    </li>
-                    <li class="aside-home__li aside-home__li--productivity">
-                        <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/bewubbww.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
-                        </lord-icon></i></a>
-                        <p>Business & Leadership</p>
-                    </li>
-                </ul>
-            </aside>
-            <main class="main-tools">
-                <div class="main-tools__favorite">
-                    <h1 class="main-tools__favorite--h1">Your Favorites</h1>
-                    <div class="main-tools__favorite--chosen"></div>
-                </div>
-                <div class="main-tools__extensions">
-                    <h2 class="main-tools__extensions--h2">Extensions</h2>
-                    <div class="main-tools__container">
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/nocovwne.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Documents</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Community</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/puvaffet.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Journal</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/pithnlch.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Mood Tracker</p>
-                        </div>
-                        <div class="main-tools__container--extension">             
-                            <lord-icon src="https://cdn.lordicon.com/qjvxqdov.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Gratitude Journal</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/wxnxiano.json"trigger="morph"colors="primary:#f6d794,secondary:#00008b"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Book Tracker</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <lord-icon src="https://cdn.lordicon.com/huwchbks.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                            <p class="main-tools__container--title">Money Tracker</p>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <a href="./cEffect.html">
-                                <lord-icon src="https://cdn.lordicon.com/rgyftmhc.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                                <p class="main-tools__container--title">Compound Effect</p>    
-                            </a>
-                        </div>
-                        <div class="main-tools__container--extension">
-                            <a href="">
-                                <lord-icon src="https://cdn.lordicon.com/ippkhukl.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
-                                <p class="main-tools__container--title">Habits Tracker</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </main>
         </div>
+        <div class="header__center">
+            <div class="header__search">
+                <div class="header__search--input search-div">
+                    <input class="search__input" type="text" placeholder="Search a book" name="" id="">
+                </div>
+                <div class="header__search--btn search-div">
+                    <a href=""><lord-icon src="https://cdn.lordicon.com/xfftupfv.json" trigger="hover" colors="primary:#00008b">
+                    </lord-icon></a>
+                </div>
+            </div>
+        </div>
+        <div class="header__end">
+            <div class="header__end--notification end__btn">
+                <a href=""><lord-icon
+                    src="https://cdn.lordicon.com/psnhyobz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
+                </lord-icon></a>
+            </div>
+            <div class="header__end--tool end__btn">
+                <a href=""><lord-icon
+                    src="https://cdn.lordicon.com/svbmmyue.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px;">
+                </lord-icon></a>
+            </div>
+            <div class="header__end--user end__btn">
+                <!-- <a href=""><i class="fa-regular fa-user fa-lg"></i></a> -->
+                <a href="">
+                    <lord-icon
+                    src="https://cdn.lordicon.com/bhfjfgqz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
+                    </lord-icon>
+                </a>
+            </div>
+        </div>
+    </header>
+    <div class="container-home">
+        <aside class="aside-home">
+            <ul class="aside-home__ul">
+                <li class="aside-home__li aside-home__li--fitness">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/hovbgwmd.json" trigger="hover" colors="primary:#00008b,secondary:#000008b" style="width:30px;height:30px"  stroke="70">
+                    </lord-icon>                          
+                    </a>
+                    <p>Fitness & Health</p>
+                </li>
+                <li class="aside-home__li aside-home__li--emotional-intelligence">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/pnhskdva.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></a>
+                    <p>Emotional Intelligence</p>
+                </li>
+                <li class="aside-home__li aside-home__li--productivity">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/hwuyodym.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></i></a>
+                    <p>Habits & Productivity</p>
+                </li>
+                <li class="aside-home__li aside-home__li--productivity">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/rzsdhkun.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></i></a>
+                    <p>Money & Finance</p>
+                </li>
+                <li class="aside-home__li aside-home__li--productivity">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/hbigeisx.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></i></a>
+                    <p>Skillset Enhancement</p>
+                </li>
+                <li class="aside-home__li aside-home__li--productivity">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/fbdgkenc.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></i></a>
+                    <p>Happiness & Success</p>
+                    <!-- Mindset will be here too -->
+                </li>
+                <li class="aside-home__li aside-home__li--productivity">
+                    <a href=""><lord-icon
+                        src="https://cdn.lordicon.com/bewubbww.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                    </lord-icon></i></a>
+                    <p>Business & Leadership</p>
+                </li>
+            </ul>
+        </aside>
+        <main class="main-tools">
+            <div class="main-tools__favorite">
+                <h1 class="main-tools__favorite--h1">Your Favorites</h1>
+                <div class="main-tools__favorite--chosen"></div>
+            </div>
+            <div class="main-tools__extensions">
+                <h2 class="main-tools__extensions--h2">Tools</h2>
+                <div class="main-tools__container">
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/nocovwne.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Documents</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Community</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/puvaffet.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Journal</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/pithnlch.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Mood Tracker</p>
+                    </div>
+                    <div class="main-tools__container--extension">             
+                        <lord-icon src="https://cdn.lordicon.com/qjvxqdov.json" trigger="hover" colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Gratitude Journal</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/wxnxiano.json"trigger="morph"colors="primary:#f6d794,secondary:#00008b"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Book Tracker</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <lord-icon src="https://cdn.lordicon.com/huwchbks.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                        <p class="main-tools__container--title">Money Tracker</p>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <a href="./cEffect.html">
+                            <lord-icon src="https://cdn.lordicon.com/rgyftmhc.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                            <p class="main-tools__container--title">Compound Effect</p>    
+                        </a>
+                    </div>
+                    <div class="main-tools__container--extension">
+                        <a href="">
+                            <lord-icon src="https://cdn.lordicon.com/ippkhukl.json"trigger="hover"colors="primary:#00008b,secondary:#f6d794"style="width:12vw;height:18vh"></lord-icon>
+                            <p class="main-tools__container--title">Habits Tracker</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </main>
     <script src="../js/script.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
